--- a/src/components/PetsList/PetsList.module.css
+++ b/src/components/PetsList/PetsList.module.css
@@ -10,6 +10,10 @@
 }
 
 @media (min-width: 768px) {
+  .user-pets-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 @media (min-width: 1280px) {
