--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -6,7 +6,7 @@
     padding: 18px 20px 40px 20px;
     border-radius: 30px;
     width: 335px;
-    height: 864px;
+    height: auto;
     background: #fff;
   }
 
@@ -52,6 +52,16 @@
 }
 
 @media (min-width: 768px) {
+  .card {
+    padding: 40px 40px 40px 40px;
+    border-radius: 60px;
+    width: 704px;
+  }
+
+  .edit-block {
+    align-items: flex-start;
+    margin: 0 0 20px 0;
+  }
 }
 
 @media (min-width: 1280px) {
