--- a/src/components/NoticesItem/NoticesItem.module.css
+++ b/src/components/NoticesItem/NoticesItem.module.css
@@ -472,6 +472,18 @@
     width: 363px;
   }
 
+  .card-profile-desktop {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    border-radius: 16px;
+    padding: 24px 24px 24px 24px;
+    width: 320px;
+    height: auto;
+    background: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
   .notice-img {
     width: 315px;
   }
