--- a/src/components/NoticesList/NoticesList.module.css
+++ b/src/components/NoticesList/NoticesList.module.css
@@ -176,6 +176,7 @@
     margin: 32px 0 0 0;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: unset;
   }
 
   /*========================MODAL ATTENTION STYLES============================================*/
@@ -211,5 +212,13 @@
     justify-content: center;
     column-gap: 32px;
     row-gap: 40px;
+  }
+
+  .notice-list-profile-desktop {
+    width: 664px;
+    margin: 32px 0 32px 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
   }
 }
