--- a/src/components/PetsItem/PetsItem.module.css
+++ b/src/components/PetsItem/PetsItem.module.css
@@ -7,6 +7,7 @@
     border-radius: 20px;
     width: 295px;
     height: 132px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -18,4 +19,8 @@
 }
 
 @media (min-width: 1280px) {
+  .card {
+    width: 440px;
+    height: 130px;
+  }
 }
